--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lisboa</title>
         <link rel="icon" href="images/sun.png">
         <link rel="stylesheet" href="style.css">
@@ -167,7 +168,7 @@
               
           <!--Vidéo YOUTUBE-->
               <div id="youtube">
-                <iframe width="640" height="360" src="https://www.youtube.com/embed/hWRmyqrq2MM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="" height="" src="https://www.youtube.com/embed/hWRmyqrq2MM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
           </section>
       
